--- a/Waterfall/FINALSHIPVPOR/FinalShipVPOR.ipynb
+++ b/Waterfall/FINALSHIPVPOR/FinalShipVPOR.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:37:50.921430Z",
-     "start_time": "2020-03-04T02:37:49.386619Z"
+     "end_time": "2020-03-30T03:07:45.827931Z",
+     "start_time": "2020-03-30T03:07:45.650886Z"
     }
    },
    "outputs": [],
@@ -15,7 +15,23 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sqlalchemy as db\n",
-    "from urllib.parse import quote_plus"
+    "from urllib.parse import quote_plus\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-30T03:07:45.833910Z",
+     "start_time": "2020-03-30T03:07:45.829920Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "path = r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\DB\\FULLSHIPVPOR'\n",
+    "os.chdir(path)"
    ]
   },
   {
@@ -37,18 +53,18 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:37:53.743095Z",
-     "start_time": "2020-03-04T02:37:52.994055Z"
+     "end_time": "2020-03-30T03:07:45.851862Z",
+     "start_time": "2020-03-30T03:07:45.836901Z"
     }
    },
    "outputs": [],
    "source": [
-    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=POR;Trusted_Connection=yes\"\n",
-    "metadata = db.MetaData()\n",
-    "quoted = quote_plus(conn)\n",
-    "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
-    "engine = db.create_engine(new_con)\n",
-    "metadata.reflect(bind=engine)"
+    "# conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=POR;Trusted_Connection=yes\"\n",
+    "# metadata = db.MetaData()\n",
+    "# quoted = quote_plus(conn)\n",
+    "# new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
+    "# engine = db.create_engine(new_con)\n",
+    "# metadata.reflect(bind=engine)"
    ]
   },
   {
@@ -63,12 +79,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-03-04T02:14:22.244Z"
+     "end_time": "2020-03-30T03:07:47.176216Z",
+     "start_time": "2020-03-30T03:07:45.855851Z"
     }
    },
    "outputs": [],
    "source": [
-    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=POR;UID=Admin;PWD=123\"\n",
+    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=POR;UID=Admin;PWD=123789\"\n",
     "metadata = db.MetaData()\n",
     "quoted = quote_plus(conn)\n",
     "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
@@ -88,16 +105,20 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:38:53.265199Z",
-     "start_time": "2020-03-04T02:37:56.325024Z"
+     "end_time": "2020-03-30T03:09:32.308336Z",
+     "start_time": "2020-03-30T03:07:47.181191Z"
     }
    },
    "outputs": [],
    "source": [
     "df_por = pd.DataFrame()\n",
     "for key in metadata.tables.keys():\n",
-    "    key = db.Table(key,metadata,autoload=True, autoload_with=engine)\n",
-    "    query = db.select([key.columns.Planning_Wk, key.columns.YYYYWW,key.columns.Region,key.columns.MPA,key.columns.Qty,key.columns.QtyType,key.columns.Platform])\n",
+    "    key = db.Table(key, metadata, autoload=True, autoload_with=engine)\n",
+    "    query = db.select([\n",
+    "        key.columns.Planning_Wk, key.columns.YYYYWW, key.columns.Region,\n",
+    "        key.columns.MPA, key.columns.Qty, key.columns.QtyType,\n",
+    "        key.columns.Platform, key.columns.DATES\n",
+    "    ])\n",
     "    ResultPOR = engine.connect().execute(query)\n",
     "    ResultSet = ResultPOR.fetchall()\n",
     "    df_por = df_por.append(ResultSet)\n",
@@ -109,8 +130,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:38:53.332023Z",
-     "start_time": "2020-03-04T02:38:53.268194Z"
+     "end_time": "2020-03-30T03:09:32.351223Z",
+     "start_time": "2020-03-30T03:09:32.311328Z"
     }
    },
    "outputs": [],
@@ -123,16 +144,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:38:54.143947Z",
-     "start_time": "2020-03-04T02:38:53.336013Z"
+     "end_time": "2020-03-30T03:09:33.020567Z",
+     "start_time": "2020-03-30T03:09:32.355214Z"
     }
    },
    "outputs": [],
    "source": [
     "por_plan = df_por['Planning_Wk'].unique()\n",
     "por_plan = por_plan.astype(str)\n",
-    "por_plan = np.core.defchararray.replace(por_plan,'W','')\n",
+    "por_plan = np.core.defchararray.replace(por_plan, 'W', '')\n",
     "por_plan = por_plan.astype(int)\n",
+    "por_plan = np.sort(por_plan)\n",
     "por_plan"
    ]
   },
@@ -155,19 +177,19 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:39:34.066332Z",
-     "start_time": "2020-03-04T02:39:33.361197Z"
+     "end_time": "2020-03-30T03:09:33.029507Z",
+     "start_time": "2020-03-30T03:09:33.023521Z"
     }
    },
    "outputs": [],
    "source": [
-    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=SHIPMENT;Trusted_Connection=yes\"\n",
-    "metadata = db.MetaData()\n",
-    "quoted = quote_plus(conn)\n",
-    "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
-    "engine = db.create_engine(new_con)\n",
-    "metadata.reflect(bind=engine)\n",
-    "SHIPMENT = db.Table('SHIPMENT', metadata, autoload=True, autoload_with=engine)"
+    "# conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=KOHMANSF1\\SQLEXPRESS;DATABASE=SHIPMENT;Trusted_Connection=yes\"\n",
+    "# metadata = db.MetaData()\n",
+    "# quoted = quote_plus(conn)\n",
+    "# new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
+    "# engine = db.create_engine(new_con)\n",
+    "# metadata.reflect(bind=engine)\n",
+    "# SHIPMENT = db.Table('SHIPMENT', metadata, autoload=True, autoload_with=engine)"
    ]
   },
   {
@@ -180,10 +202,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-30T03:09:33.735972Z",
+     "start_time": "2020-03-30T03:09:33.032497Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=SHIPMENT;UID=Admin;PWD=123\"\n",
+    "conn = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=15.46.110.222,1433;DATABASE=SHIPMENT;UID=Admin;PWD=123789\"\n",
     "metadata = db.MetaData()\n",
     "quoted = quote_plus(conn)\n",
     "new_con = 'mssql+pyodbc:///?odbc_connect={}'.format(quoted)\n",
@@ -197,14 +224,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:39:45.615541Z",
-     "start_time": "2020-03-04T02:39:45.476903Z"
+     "end_time": "2020-03-30T03:09:34.271874Z",
+     "start_time": "2020-03-30T03:09:33.737959Z"
     }
    },
    "outputs": [],
    "source": [
-    "queryship = db.select([SHIPMENT.columns.YYYYWW, SHIPMENT.columns.YYYYWW,SHIPMENT.columns.Region,SHIPMENT.columns.MPA,SHIPMENT.columns.Qty,\n",
-    "                   SHIPMENT.columns.QtyType,SHIPMENT.columns.Platform]).order_by(SHIPMENT.columns.YYYYWW,SHIPMENT.columns.Platform)\n",
+    "queryship = db.select([\n",
+    "    SHIPMENT.columns.YYYYWW, SHIPMENT.columns.Region, SHIPMENT.columns.MPA,\n",
+    "    SHIPMENT.columns.Qty, SHIPMENT.columns.QtyType, SHIPMENT.columns.Platform,\n",
+    "    SHIPMENT.columns.DATES\n",
+    "]).order_by(SHIPMENT.columns.YYYYWW, SHIPMENT.columns.Platform)\n",
     "ResultSHIPMENT = engine.connect().execute(queryship)\n",
     "ResultSetSHIP = ResultSHIPMENT.fetchall()"
    ]
@@ -214,8 +244,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:39:52.145593Z",
-     "start_time": "2020-03-04T02:39:52.092732Z"
+     "end_time": "2020-03-30T03:09:34.354165Z",
+     "start_time": "2020-03-30T03:09:34.273868Z"
     }
    },
    "outputs": [],
@@ -229,8 +259,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:39:56.122931Z",
-     "start_time": "2020-03-04T02:39:56.106977Z"
+     "end_time": "2020-03-30T03:09:34.378103Z",
+     "start_time": "2020-03-30T03:09:34.356161Z"
     }
    },
    "outputs": [],
@@ -243,14 +273,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:40:00.738875Z",
-     "start_time": "2020-03-04T02:40:00.732893Z"
+     "end_time": "2020-03-30T03:09:34.394577Z",
+     "start_time": "2020-03-30T03:09:34.382092Z"
     }
    },
    "outputs": [],
    "source": [
-    "def porship_inter(por_plan,YYYYWW):   \n",
-    "    df_shipment.loc[(YYYYWW<=por_plan),'Planning_Wk'] = por_plan"
+    "def porship_inter(por_plan, YYYYWW):\n",
+    "    df_shipment.loc[(YYYYWW <= por_plan), 'Planning_Wk'] = por_plan"
    ]
   },
   {
@@ -258,8 +288,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:40:09.513111Z",
-     "start_time": "2020-03-04T02:40:03.296158Z"
+     "end_time": "2020-03-30T03:09:47.104713Z",
+     "start_time": "2020-03-30T03:09:34.403548Z"
     }
    },
    "outputs": [],
@@ -267,9 +297,9 @@
     "df_shipment['Planning_Wk'] = 0\n",
     "new_df = pd.DataFrame()\n",
     "for plan in por_plan:\n",
-    "    porship_inter(plan,df_shipment['YYYYWW'])\n",
+    "    porship_inter(plan, df_shipment['YYYYWW'])\n",
     "    new_df = new_df.append(df_shipment)\n",
-    "new_df = new_df[(new_df[['Planning_Wk']]!=0).all(axis=1)]\n",
+    "new_df = new_df[(new_df[['Planning_Wk']] != 0).all(axis=1)]\n",
     "new_df"
    ]
   },
@@ -278,14 +308,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:40:15.045738Z",
-     "start_time": "2020-03-04T02:40:14.536102Z"
+     "end_time": "2020-03-30T03:09:48.252744Z",
+     "start_time": "2020-03-30T03:09:47.108703Z"
     }
    },
    "outputs": [],
    "source": [
     "new_df['Planning_Wk'] = new_df['Planning_Wk'].astype(str)\n",
-    "new_df['Planning_Wk'] = new_df.Planning_Wk.str.slice(stop=4) + \"W\" + new_df.Planning_Wk.str.slice(start=4)"
+    "new_df['Planning_Wk'] = new_df.Planning_Wk.str.slice(\n",
+    "    stop=4) + \"W\" + new_df.Planning_Wk.str.slice(start=4)"
    ]
   },
   {
@@ -293,13 +324,16 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:40:18.019750Z",
-     "start_time": "2020-03-04T02:40:17.883115Z"
+     "end_time": "2020-03-30T03:09:48.631743Z",
+     "start_time": "2020-03-30T03:09:48.264711Z"
     }
    },
    "outputs": [],
    "source": [
-    "new_df = new_df[['Planning_Wk', 'YYYYWW','Region','MPA','Qty','QtyType','Platform']]\n",
+    "new_df = new_df[[\n",
+    "    'Planning_Wk', 'YYYYWW', 'Region', 'MPA', 'Qty', 'QtyType', 'Platform',\n",
+    "    'DATES'\n",
+    "]]\n",
     "new_df"
    ]
   },
@@ -308,13 +342,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:40:31.633579Z",
-     "start_time": "2020-03-04T02:40:27.776541Z"
+     "end_time": "2020-03-30T03:09:53.076231Z",
+     "start_time": "2020-03-30T03:09:48.633732Z"
     }
    },
    "outputs": [],
    "source": [
-    "FinalShipVPOR = pd.concat([df_por,new_df], ignore_index=True)\n",
+    "FinalShipVPOR = pd.concat([df_por, new_df], ignore_index=True)\n",
     "FinalShipVPOR"
    ]
   },
@@ -323,14 +357,56 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-04T02:44:40.601632Z",
-     "start_time": "2020-03-04T02:44:06.251836Z"
+     "end_time": "2020-03-30T03:09:53.085212Z",
+     "start_time": "2020-03-30T03:09:53.079225Z"
     }
    },
    "outputs": [],
    "source": [
-    "FinalShipVPOR.to_csv(r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\FinalShipVPOR\\FinalShipVPOR.csv',\n",
-    "                     index=False)"
+    "mpa_dict = {\n",
+    "    'NKG-THAILAND': 'NKG Thailand',\n",
+    "    'NKG Thailand': 'NKG Thailand',\n",
+    "    'NKG-YUEYANG': 'NKG Yue Yang',\n",
+    "    'DSG-VIETNAM': 'DSG Vietnam',\n",
+    "    'DSG Vietnam': 'DSG Vietnam',\n",
+    "    'FLEX-PTP': 'Flex PTP Malasya',\n",
+    "    'Flex PTP Malasya': 'Flex PTP Malasya',\n",
+    "    'FLEX-ZHUHAI': 'Flex Zhuhai',\n",
+    "    'Flex Zhuhai': 'Flex Zhuhai',\n",
+    "    'FOXCONN': 'Foxconn ChongQing',\n",
+    "    'Foxconn ChongQing': 'Foxconn ChongQing',\n",
+    "    'Jabil Circuit De Chihuahua': 'Jabil Circuit De Chihuahua',\n",
+    "    'Jabil Circuit Netherlands BV': 'Jabil Circuit Netherlands BV'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-30T03:09:55.112336Z",
+     "start_time": "2020-03-30T03:09:53.088202Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "FinalShipVPOR['MPA'] = FinalShipVPOR['MPA'].map(lambda x: mpa_dict.get(x, x))\n",
+    "FinalShipVPOR.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-30T03:10:30.115711Z",
+     "start_time": "2020-03-30T03:09:55.114329Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "FinalShipVPOR.to_csv('FULLSHIPVPOR.csv', index=False)"
    ]
   }
  ],
