--- a/Waterfall/POR/POR Data Cleaning.ipynb
+++ b/Waterfall/POR/POR Data Cleaning.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-10T01:52:15.120822Z",
-     "start_time": "2020-03-10T01:52:13.578303Z"
+     "end_time": "2020-03-20T08:45:56.946097Z",
+     "start_time": "2020-03-20T08:45:54.956487Z"
     }
    },
    "outputs": [],
@@ -18,151 +18,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-10T02:31:03.729477Z",
-     "start_time": "2020-03-10T02:28:20.912612Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "AllPOR = pd.read_excel(r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\JoannePOR\\POR Waterfall_Yr 2020.xlsx',\n",
-    "                       usecols='A,C,E:H,J,K:CJ',sheet_name=\"W09 POR Data\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-10T02:10:45.494685Z",
-     "start_time": "2020-03-10T02:10:45.486707Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def convert (PORDATA):\n",
-    "    Dates = PORDATA.columns[7:].values\n",
-    "    PORDATA['Attribute'] = 'N/A'\n",
-    "    col = 7\n",
-    "    new_por = pd.DataFrame()\n",
-    "    for date in Dates:\n",
-    "        PORDATA['Attribute'] = date\n",
-    "        PORDATA['Value'] = PORDATA.iloc[:,col]\n",
-    "        new_por = new_por.append(PORDATA)\n",
-    "        col = col + 1\n",
-    "    final_por = new_por.iloc[:,list(range(7)) + [-2,-1]]\n",
-    "    return final_por"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-10T02:31:56.193224Z",
-     "start_time": "2020-03-10T02:31:56.163302Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "AllPOR.iloc[:,7:] = AllPOR.iloc[:,7:].fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-10T02:31:57.451869Z",
-     "start_time": "2020-03-10T02:31:57.415926Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "AllPOR.tail(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-10T02:32:25.698124Z",
-     "start_time": "2020-03-10T02:32:15.529911Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "convert(AllPOR).to_csv('2020W09.csv',index=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**J POR**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:14:55.204277Z",
-     "start_time": "2020-03-09T07:14:55.198294Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "path = os.getcwd()\n",
-    "files = os.listdir(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\JoannePOR\\Converted\\2019POR')\n",
-    "os.chdir(r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\JoannePOR\\Converted\\2019POR')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:15:28.048122Z",
-     "start_time": "2020-03-09T07:15:28.044143Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "files_csv = [f for f in files if f[0:4] == '2019']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:16:10.944783Z",
-     "start_time": "2020-03-09T07:15:58.679591Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame()\n",
-    "\n",
-    "for f in files_csv:\n",
-    "    data = pd.read_csv(f)\n",
-    "    df = df.append(data)\n",
-    "\n",
-    "df.head()"
    ]
   },
   {
@@ -177,23 +36,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:21:43.618603Z",
-     "start_time": "2020-03-03T06:21:43.612618Z"
+     "end_time": "2020-03-20T08:46:03.856295Z",
+     "start_time": "2020-03-20T08:46:03.851307Z"
     }
    },
    "outputs": [],
    "source": [
     "path = os.getcwd()\n",
-    "files = os.listdir(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\2018POR')\n",
-    "os.chdir(r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\2018POR')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Select all XXXX POR files (Change the code XXXX for different year)**"
+    "files = os.listdir(r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\DB\\POR\\POR2020')\n",
+    "os.chdir(r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\DB\\POR\\POR2020')"
    ]
   },
   {
@@ -201,20 +52,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:21:46.574225Z",
-     "start_time": "2020-03-03T06:21:46.569237Z"
+     "end_time": "2020-03-20T08:46:04.297403Z",
+     "start_time": "2020-03-20T08:46:04.293409Z"
     }
    },
    "outputs": [],
    "source": [
-    "files_xlsx = [f for f in files if f[4:8] == '2018']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Merge all XXXX POR files into one**"
+    "files_csv = [f for f in files if f[4:8] == '2020']"
    ]
   },
   {
@@ -222,17 +66,16 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-03T06:25:55.981853Z",
-     "start_time": "2020-03-03T06:22:00.438552Z"
-    },
-    "scrolled": true
+     "end_time": "2020-03-20T08:46:08.348437Z",
+     "start_time": "2020-03-20T08:46:05.964637Z"
+    }
    },
    "outputs": [],
    "source": [
     "df = pd.DataFrame()\n",
     "\n",
-    "for f in files_xlsx:\n",
-    "    data = pd.read_excel(f)\n",
+    "for f in files_csv:\n",
+    "    data = pd.read_csv(f, parse_dates=['Attribute'],dayfirst=True)\n",
     "    df = df.append(data)\n",
     "\n",
     "df.head()"
@@ -243,8 +86,42 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-09T07:17:09.116041Z",
-     "start_time": "2020-03-09T07:16:47.195679Z"
+     "end_time": "2020-03-20T07:18:55.801815Z",
+     "start_time": "2020-03-20T07:17:43.267228Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# path = os.getcwd()\n",
+    "# files = os.listdir(\n",
+    "#     r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\DB\\POR\\POR2018')\n",
+    "# os.chdir(r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\DB\\POR\\POR2018')\n",
+    "\n",
+    "# files_xlsx = [f for f in files if f[4:8] == '2018']\n",
+    "\n",
+    "# df = pd.DataFrame()\n",
+    "\n",
+    "# for f in files_xlsx:\n",
+    "#     data = pd.read_excel(f)\n",
+    "#     df = df.append(data)\n",
+    "\n",
+    "# df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# POR Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T08:46:17.089548Z",
+     "start_time": "2020-03-20T08:46:12.981618Z"
     }
    },
    "outputs": [],
@@ -260,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Get region base on target location base on original excel file**"
+    "**Get region base on target location base on original POR excel file**"
    ]
   },
   {
@@ -268,24 +145,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-09T07:20:28.472903Z",
-     "start_time": "2020-03-09T07:19:36.983407Z"
+     "end_time": "2020-03-20T08:46:17.175782Z",
+     "start_time": "2020-03-20T08:46:17.091545Z"
     }
    },
    "outputs": [],
    "source": [
     "dfreg = pd.read_excel(\n",
-    "    r'C:\\Users\\KohMansf\\Desktop\\MJ Projects\\All Files\\Waterfall\\Others\\MJ.xlsm',\n",
-    "    sheet_name='2Region_Ref',\n",
+    "    r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\DB\\Country of Target Location\\Country of Target Location.xlsx',\n",
+    "    sheet_name='Country of Target Location',\n",
     "    na_filter=False,\n",
-    "    usecols='B:C')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Merge region with XXXX POR files base on target location and convert date to int"
+    "    usecols='A:B')"
    ]
   },
   {
@@ -293,8 +163,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-09T07:20:32.690485Z",
-     "start_time": "2020-03-09T07:20:31.351037Z"
+     "end_time": "2020-03-20T08:46:17.496225Z",
+     "start_time": "2020-03-20T08:46:17.177613Z"
     }
    },
    "outputs": [],
@@ -309,8 +179,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-09T07:20:34.670222Z",
-     "start_time": "2020-03-09T07:20:32.693445Z"
+     "end_time": "2020-03-20T08:46:18.168242Z",
+     "start_time": "2020-03-20T08:46:17.498221Z"
     },
     "scrolled": true
    },
@@ -318,7 +188,10 @@
    "source": [
     "dfmerge.drop(columns=['Attribute'])\n",
     "dfmerge['Time'] = (dfmerge['Time'] - dt.datetime(1899, 12, 30)).dt.days\n",
-    "dfmerge = dfmerge.drop(columns=['Attribute'])"
+    "# dfmerge = dfmerge.drop(columns=['Attribute'])\n",
+    "\n",
+    "dfmerge['Planning Part Group'] = dfmerge['Planning Part Group'].str.rstrip(\n",
+    "    'GROUP')"
    ]
   },
   {
@@ -326,12 +199,41 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-09T07:20:34.693095Z",
-     "start_time": "2020-03-09T07:20:34.672151Z"
+     "end_time": "2020-03-20T08:46:18.176915Z",
+     "start_time": "2020-03-20T08:46:18.170932Z"
     }
    },
    "outputs": [],
    "source": [
+    "mpa_dict = {\n",
+    "    'NKG-THAILAND': 'NKG Thailand',\n",
+    "    'NKG Thailand': 'NKG Thailand',\n",
+    "    'NKG-YUEYANG': 'NKG Yue Yang',\n",
+    "    'DSG-VIETNAM': 'DSG Vietnam',\n",
+    "    'DSG Vietnam': 'DSG Vietnam',\n",
+    "    'FLEX-PTP': 'Flex PTP Malasya',\n",
+    "    'Flex PTP Malasya': 'Flex PTP Malasya',\n",
+    "    'FLEX-ZHUHAI': 'Flex Zhuhai',\n",
+    "    'Flex Zhuhai': 'Flex Zhuhai',\n",
+    "    'FOXCONN': 'Foxconn ChongQing',\n",
+    "    'Foxconn ChongQing': 'Foxconn ChongQing',\n",
+    "    'Jabil Circuit De Chihuahua': 'Jabil Circuit De Chihuahua',\n",
+    "    'Jabil Circuit Netherlands BV': 'Jabil Circuit Netherlands BV'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T08:46:18.403860Z",
+     "start_time": "2020-03-20T08:46:18.179910Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dfmerge['MPA'] = dfmerge['MPA'].map(lambda x: mpa_dict.get(x, x))\n",
     "dfmerge.head()"
    ]
   },
@@ -339,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create Primary Key and Foreign Key"
+    "# Output"
    ]
   },
   {
@@ -347,25 +249,18 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-09T07:20:46.248734Z",
-     "start_time": "2020-03-09T07:20:38.593215Z"
+     "end_time": "2020-03-20T08:46:18.524298Z",
+     "start_time": "2020-03-20T08:46:18.406852Z"
     }
    },
    "outputs": [],
    "source": [
-    "dfmerge[[\n",
-    "    'Target Location', 'MPA', 'Planning Part', 'Time',\n",
-    "    'Current Cycle on Display'\n",
-    "]] = dfmerge[[\n",
-    "    'Target Location', 'MPA', 'Planning Part', 'Time',\n",
-    "    'Current Cycle on Display'\n",
-    "]].astype('str')\n",
-    "\n",
-    "dfmerge['PK'] = dfmerge['Target Location'] + dfmerge['MPA'] + \\\n",
-    "    dfmerge['Planning Part'] + dfmerge['Time'] + \\\n",
-    "    dfmerge['Current Cycle on Display']\n",
-    "dfmerge['FK'] = dfmerge['Region'] + dfmerge['Planning Part'] + \\\n",
-    "    dfmerge['Time'] + dfmerge['Current Cycle on Display']"
+    "dffinal = dfmerge[[\n",
+    "    'Current Cycle on Display', 'Product Line', 'Platform',\n",
+    "    'Planning Part Group', 'Target Location', 'Planning Part', 'MPA', 'region',\n",
+    "    'Value', 'YYYYWW', 'Attribute'\n",
+    "]]\n",
+    "dffinal"
    ]
   },
   {
@@ -373,181 +268,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-09T07:20:46.273668Z",
-     "start_time": "2020-03-09T07:20:46.250729Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "dfmerge.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Finding Duplicates on primary key (IF ANY)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:20:53.097830Z",
-     "start_time": "2020-03-09T07:20:49.235165Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "duplicateRowsDF = dfmerge[dfmerge.duplicated(['PK'])]\n",
-    "\n",
-    "duplicateRowsDF"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Group By Primary Key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:21:12.216357Z",
-     "start_time": "2020-03-09T07:21:01.264654Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dfmerge2 = dfmerge.groupby('PK', as_index=False)['Value'].sum()\n",
-    "\n",
-    "dfmerge2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Drop Duplicates (IF ANY)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:21:16.004258Z",
-     "start_time": "2020-03-09T07:21:12.219351Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dropdf = dfmerge.drop_duplicates(subset='PK', keep='first')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:21:16.039171Z",
-     "start_time": "2020-03-09T07:21:16.006258Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dropdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:21:16.591665Z",
-     "start_time": "2020-03-09T07:21:16.041126Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dfdropvalue = dropdf.drop(columns='Value')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:21:16.623569Z",
-     "start_time": "2020-03-09T07:21:16.594646Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dfdropvalue.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Merge on Primary Key and remove word \"group\" from Planning Part Group"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:21:26.876141Z",
-     "start_time": "2020-03-09T07:21:16.626566Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dffinal = pd.merge(dfmerge2, dfdropvalue, on='PK')\n",
-    "dffinal['Planning Part Group'] = dffinal['Planning Part Group'].str.rstrip(\n",
-    "    'GROUP')\n",
-    "dffinal.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Rearrange Data and Output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:21:28.762098Z",
-     "start_time": "2020-03-09T07:21:26.878138Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dffinalarr = dffinal[[\n",
-    "    'PK', 'Current Cycle on Display', 'Product Line', 'Platform',\n",
-    "    'Planning Part Group', 'Target Location', 'Planning Part', 'MPA', 'Time',\n",
-    "    'Value', 'FK'\n",
-    "]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-09T07:21:39.779667Z",
-     "start_time": "2020-03-09T07:21:38.400358Z"
+     "end_time": "2020-03-20T08:46:18.745712Z",
+     "start_time": "2020-03-20T08:46:18.528291Z"
     }
    },
    "outputs": [],
@@ -559,8 +281,9 @@
     "        \"Planning Part Group\": \"Program\",\n",
     "        \"Target Location\": \"Target_Location\",\n",
     "        \"Planning Part\": \"SKU\",\n",
-    "        \"Time\": \"WkDate\",\n",
-    "        \"Value\": \"Qty\"\n",
+    "        \"Value\": \"Qty\",\n",
+    "        \"region\": \"Region\",\n",
+    "        \"Attribute\": \"DATES\"\n",
     "    })\n",
     "por_df['QtyType'] = 'POR'\n",
     "por_df.head()"
@@ -571,14 +294,37 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-09T07:22:36.998931Z",
-     "start_time": "2020-03-09T07:22:03.631146Z"
+     "end_time": "2020-03-20T08:46:46.314468Z",
+     "start_time": "2020-03-20T08:46:36.173631Z"
     }
    },
    "outputs": [],
    "source": [
-    "por_df.to_csv('2019_to_upload.csv', index=False)"
+    "por_df.to_csv('2020_to_upload.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-20T08:46:46.326794Z",
+     "start_time": "2020-03-20T08:46:46.314468Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# por_df.shape\n",
+    "\n",
+    "# por_df.isnull().any().any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -631,7 +377,7 @@
     "height": "1106px",
     "left": "478px",
     "top": "110px",
-    "width": "249.797px"
+    "width": "249.787px"
    },
    "toc_section_display": true,
    "toc_window_display": true
